cppcheck_report.txt
include/Interrupter.h:61:10: style:inconclusive: Technically the member function 'RpiGpioInterrupter::CallbackEntry::operator==' can be const. [functionConst]
    bool operator==(const CallbackEntry& ce) noexcept {
         ^
include/Interrupter.h:58:5: style: Class 'CallbackEntry' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    CallbackEntry(const INTERRUPT_CALLBACK cb) noexcept
    ^
src/Interrupter.cpp:435:30: style: Consider using std::any_of algorithm instead of a raw loop. [useStlAlgorithm]
            if(ce->id == id) {
                             ^
src/Interrupter.cpp:475:30: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if(ce->id == id) {
                             ^
src/test.cpp:49:10: error: Uninitialized variable: id [uninitvar]
        [id]() {
         ^
src/Interrupter.cpp:106:0: style: The function 'getInterrupts' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

